<resources>
    <string name="app_name">SilentSOS</string>
    <string name="logo_description">Super Silent logo</string>
    <string name="super_silent_name">Super Silent</string>
    <string name="motto">Safety without hassle</string>
    <string name="example_email">lilysmith@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="example_password">********</string>
    <string name="login">Login</string>
    <string name="register_prompt">Don’t have an account? Register</string>
    <string name="register_now">Register Now</string>
    <string name="register_motto">Make your free account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_prompt">Already have an account? Login here</string>
    <string name="alarm_setup_step1">1. Set Up Your Silent Alarm</string>
    <string name="alarm_message_hint">This message will be sent to your emergency contacts. Keep it personal</string>
    <string name="location_checkbox_prompt">Include location (Recommended)</string>
    <string name="message">Message</string>
    <string name="activation_sequence">Activation Sequence</string>
    <string name="set_new_sequence">Set new sequence</string>
    <string name="next">Next</string>
    <string name="activation_sequence_page_title">Set your own activation sequence</string>
    <string name="back">Back</string>
    <string name="listening_to_buttons">Listening to volume buttons now…</string>
    <string name="button_sequence_creation_tip">Press the volume buttons in your desired sequence. This will be how you activate your silent alarm later. Ensure it is an uncommon pattern to reduce the risk of false positives!</string>
    <string name="choose_contacts_step2">2. Choose emergency contacts</string>
    <string name="finish">Finish</string>
    <string name="add_a_contact">+ Add a contact</string>
    <string name="emergency_contact_tips">Super Silent will send messages to these contacts when you are in an emergency situation. Make sure these are people that you trust and who live near you.</string>
    <string name="current_location">Current Location</string>
    <string name="main_page_emergency_tip">Press the SOS button, or your pre-set activation sequence. Your location will be shared with your emergency contacts</string>
    <string name="main_page_emergency_title">Are you in an emergency?</string>
    <string name="sos">SOS</string>
    <string name="hold_for_3_seconds">Hold for 3 seconds</string>
    <string name="silent_alarm_details">Silent Alarm Details</string>
    <string name="location_included">Location included</string>
    <string name="no_message_set_yet">No message set yet</string>
    <string name="edit">Edit</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="go_now">Go Now</string>
    <string name="how_does_it_work">How Does It Work?</string>
    <string name="how_it_works_intro">Confused about Super Silent and what it does? Or just need a refresher? No worries! Go through our Welcome Section to get an idea of how the app works and if it’s right for you</string>
    <string name="edit_your_silent_alarm">Edit Your Silent Alarm</string>
    <string name="change_emergency_contacts">Change Emergency Contacts</string>
    <string name="accessibility_service_description">Accessibility service used to listen to volume buttons</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
</resources>