<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingTop="24dp"
    android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        >
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/edit_your_silent_alarm"
            android:fontFamily="@font/inter_semibold"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:gravity="center"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="16sp"
        android:paddingTop="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:strokeWidth="0dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/messageEditView"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:hint="@string/alarm_message_hint"
            android:background="?attr/colorSurface"
            android:padding="10dp"
            android:gravity="top"
            />
    </com.google.android.material.card.MaterialCardView>

    <CheckBox
        android:id="@+id/locationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_checkbox_prompt"
        android:theme="@style/checkboxStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_sequence"
        android:textSize="16sp"
        android:paddingTop="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:strokeWidth="0dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:id="@+id/buttonSequenceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:background="?attr/colorSurface"
            android:padding="10dp"
            >
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/setNewSequenceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_new_sequence"
        android:textColor="@color/orange"
        android:paddingTop="5dp"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            />
    </LinearLayout>
</LinearLayout>
