<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingTop="24dp"
    android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        >
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activation_sequence_page_title"
            android:fontFamily="@font/inter_semibold"
            android:paddingStart="10dp"
            android:textSize="20sp"
            android:gravity="start"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"
            android:paddingVertical="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:textAlignment="center"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/listening_to_buttons"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
            <TextView
                android:textAlignment="center"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_sequence_creation_tip"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_regular"
            />
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/sequenceBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_sequence"
        android:textSize="16sp"
        android:paddingTop="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:strokeWidth="0dp"
        android:layout_marginTop="10dp"
        android:minHeight="40dp">
        <LinearLayout
            android:id="@+id/buttonSequenceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:background="?attr/colorSurface"
            android:padding="10dp"
            >
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            />
    </LinearLayout>
</LinearLayout>
